# ceiora-risk

./: .dockerignore  .env.example  .firebaserc  .gitignore  AGENTS.md  LICENSE  Makefile  OPERATIONS_PLAYBOOK.md  cPAR_full_spec.md  cUSE4_engine_spec.md  cache.db.diagnostic.bak  firebase.json  loading-preview.html  start.sh  trading_calendar.py
backend/: CANONICAL_DATA_REWORK_PLAN.md  CUSE4_BACKEND_RECONSTRUCTION_PLAN.md  CUSE4_WORK_PROGRESS_LOG.md  Dockerfile.control  Dockerfile.serve  GICS_INDUSTRY_HISTORY_PROTOCOL.md  OPTIMIZATION_AUDIT_2026-03-04.md  README.md  TRBC_INDUSTRY_HISTORY_PROTOCOL.md  app_factory.py  config.py  control_main.py  main.py  pyproject.toml  serve_main.py  trading_calendar.py
backend/analytics/: contracts.py  health.py  health_payloads.py  pipeline.py  publish_payloads.py  refresh_context.py  refresh_metadata.py  refresh_persistence.py  refresh_policy.py  refresh_publication.py  reuse_policy.py  trbc_sector.py
backend/api/: __init__.py  auth.py  router_registry.py
backend/barra/: covariance.py  daily_factor_returns.py  descriptors.py  eligibility.py  factor_model.py  gics_mapping.py  math_utils.py  raw_cross_section_history.py  risk_attribution.py  specific_risk.py  wls_regression.py
backend/cpar/: hedge_engine.py
backend/cuse4/: __init__.py  bootstrap.py  estu.py  schema.py
backend/data/: __init__.py  account_scope.py  app_identity.py  cache.py  core_read_backend.py  core_reads.py  cpar_outputs.py  cpar_queries.py  cpar_schema.py  cpar_source_reads.py  cpar_writers.py  cross_section_snapshot.py  cross_section_snapshot_build.py  cross_section_snapshot_schema.py  cuse_membership_reads.py  health_audit.py  history_queries.py  holdings_reads.py  job_runs.py  model_output_payloads.py  model_output_schema.py  model_output_state.py  model_output_writers.py  model_outputs.py  neon_primary_write.py  postgres.py  registry_quote_reads.py  retention.py  runtime_state.py  runtime_state_authority.py  serving_output_read_authority.py  serving_outputs.py  source_dates.py  source_read_authority.py  source_reads.py  sqlite.py
backend/db/: cross_section_snapshot.py  model_outputs.py  neon.py  postgres.py  sqlite.py  trbc_schema.py
backend/jobs/: __init__.py  run_model_pipeline.py
backend/ops/: __init__.py  cloud_run_jobs.py
backend/orchestration/: __init__.py  cpar_profiles.py  cpar_stages.py  finalize_run.py  post_run_publish.py  profiles.py  run_cpar_pipeline.py  run_model_pipeline.py  runtime_support.py  stage_core.py  stage_execution.py  stage_planning.py  stage_runner.py  stage_serving.py  stage_source.py
backend/portfolio/: mock_portfolio.py  models.py  positions_store.py
backend/risk_model/: __init__.py  covariance.py  cuse_membership.py  daily_factor_returns.py  descriptors.py  eligibility.py  factor_catalog.py  model_status.py  projected_loadings.py  raw_cross_section_history.py  regression_frame.py  (+3 more)
(+722 files in other folders)
