[project]
name = "barra-dashboard-backend"
version = "0.1.0"
description = "Barra Factor Risk Model Dashboard - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
    "pytest>=7.4.0",
]
lseg = [
    "jl-lseg-toolkit>=0.1.0; python_version >= '3.12'",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
