[project]
name = "cuse-dashboard-backend"
version = "0.1.0"
description = "cUSE4 Factor Risk Dashboard - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.12.0",
    "exchange-calendars>=4.5.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
    "pytest>=7.4.0",
]
lseg = [
    "lseg-data; python_version >= '3.12'",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = [
    "backend",
    "backend.api",
    "backend.api.routes",
    "backend.analytics",
    "backend.analytics.services",
    "backend.cpar",
    "backend.data",
    "backend.ops",
    "backend.orchestration",
    "backend.portfolio",
    "backend.risk_model",
    "backend.scripts",
    "backend.services",
    "backend.universe",
    "backend.vendor",
    "backend.vendor.lseg_toolkit",
    "backend.vendor.lseg_toolkit.client",
    "backend.vendor.lseg_toolkit.earnings",
    "backend.vendor.lseg_toolkit.equity_screener",
    "backend.vendor.lseg_toolkit.shared",
]

[tool.setuptools.package-dir]
backend = "."
"backend.api" = "api"
"backend.api.routes" = "api/routes"
"backend.analytics" = "analytics"
"backend.analytics.services" = "analytics/services"
"backend.cpar" = "cpar"
"backend.data" = "data"
"backend.ops" = "ops"
"backend.orchestration" = "orchestration"
"backend.portfolio" = "portfolio"
"backend.risk_model" = "risk_model"
"backend.scripts" = "scripts"
"backend.services" = "services"
"backend.universe" = "universe"
"backend.vendor" = "vendor"
"backend.vendor.lseg_toolkit" = "vendor/lseg_toolkit"
"backend.vendor.lseg_toolkit.client" = "vendor/lseg_toolkit/client"
"backend.vendor.lseg_toolkit.earnings" = "vendor/lseg_toolkit/earnings"
"backend.vendor.lseg_toolkit.equity_screener" = "vendor/lseg_toolkit/equity_screener"
"backend.vendor.lseg_toolkit.shared" = "vendor/lseg_toolkit/shared"
